criei o arquivo sobre.html e editei o arquivo index.html

--- a/public_html/sobre.html
+++ b/public_html/sobre.html
@@ -6,6 +6,10 @@
     <title>Robotica</title>
 </head>
 <body>
-    <h2>Robótica Prática</h2>
+    <h2>Nós</h2>
+    <p>A robótica é algo não só do futuro.. é algo do presetnte.
+
+    </p>
+    
 </body>
 </html>
